paid amount in membership fees
